--- a/index.html
+++ b/index.html
@@ -223,17 +223,17 @@ href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 <section>
 
   <div class ="gallery">
-     <a href="img/Greenpop - Business Card2 small.jpg">Business Card<img src="img/Greenpop - Business Card2 small.jpg"></a>
-    <a href="img/Greenpop - Business Card.jpg">Business Card<img src="img/Greenpop - Business Card.jpg"></a>
-    <a href="img/Business card Front.jpg">Business Card<img src="img/Business card Front.jpg"></a>
-    <a href="img/Business card Front 2.jpg">Business Card front<img src="img/Business card Front 2.jpg"></a>
-    <a href="img/BUSINESS CARD1 Front 2.jpg">Business Card front<img src="img/BUSINESS CARD1 Front 2.jpg"></a>
-    <a href="img/Logo 1.jpg">Business card<img src="img/Logo 1.jpg"></a>
-    <a href="img/Logo 2.png">Logo<img src="img/Logo 2.png"></a>
-    <a href="img/Logo 3.png">Logo<img src="img/Logo 3.png"></a>
-    <a href="img/logo 2.jpg">Logo<img src="img/logo 2.jpg"></a>
-    <a href="img/initech logo.jpg">Logo<img src="img/initech logo.jpg"></a>
-    <a href="img/YannicksBarLogo.jpg">Logo<img src="img/YannicksBarLogo.jpg"></a>
+     <a href="img/Greenpop - Business Card2 small.jpg">BUSINESS CARDS</a><img src="img/Greenpop - Business Card2 small.jpg"></a>
+    <a href="img/Greenpop - Business Card.jpg"><img src="img/Greenpop - Business Card.jpg"></a>
+    <a href="img/Business card Front.jpg"><img src="img/Business card Front.jpg"></a>
+    <a href="img/Business card Front 2.jpg"><img src="img/Business card Front 2.jpg"></a>
+    <a href="img/BUSINESS CARD1 Front 2.jpg"><img src="img/BUSINESS CARD1 Front 2.jpg"></a>
+    <a href="img/Logo 1.jpg"><img src="img/Logo 1.jpg"></a>
+    <a href="img/Logo 2.png">LOGO<img src="img/Logo 2.png"></a>
+    <a href="img/Logo 3.png"><img src="img/Logo 3.png"></a>
+    <a href="img/logo 2.jpg"><img src="img/logo 2.jpg"></a>
+    <a href="img/initech logo.jpg"><img src="img/initech logo.jpg"></a>
+    <a href="img/YannicksBarLogo.jpg"><img src="img/YannicksBarLogo.jpg"></a>
   </div>
 </section>
 <!----Price
